# BLE_GATT

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: lib.rs
src/task/: ble.rs  display.rs  mod.rs  temperature.rs
tests/: hello_test.rs
