[package]
edition      = "2021"
name         = "coa_gatt"
rust-version = "1.86"
version      = "0.1.0"

[features]
default = ["esp32c3"]
esp32c3 = ["esp-bootloader-esp-idf/esp32c3", "esp-hal-embassy/esp32c3",  "esp-wifi/esp32c3", "esp-rom-sys/esp32c3"]
esp32c6 = ["esp-bootloader-esp-idf/esp32c6", "esp-hal-embassy/esp32c6", "esp-wifi/esp32c6", "esp-rom-sys/esp32c6"]


[[bin]]
name = "coa_gatt"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
embedded-graphics = { version = "0.8.1", features = [
  "defmt",
] }

ssd1306 = { version = "0.10.0", features = [
] }
defmt = "1.0.1"
esp-rom-sys = { version = "0.1.1" } # features will be enabled via the project features
esp-bootloader-esp-idf = { version = "0.2.0"}
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "unstable",
] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
defmt-rtt = "0.4.0"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt"] }
esp-wifi = { version = "0.15.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.1" }

[dev-dependencies]
embedded-test = { version = "0.6.0", features = [
  "defmt",
  "embassy",
  "external-executor",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
split-debuginfo = "packed"
